--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -25,6 +25,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "100528be-33fb-4f95-b8f8-e791de38fe6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2c93f5c7-8968-4a0e-907f-a6bc60d0dd3d",
    "metadata": {},
@@ -75,9 +87,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "machine-learning-venv",
    "language": "python",
-   "name": "python3"
+   "name": "machine-learning-venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -89,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
