In machine_learning_template.ipynb, in data loading section, read data from csv to pandas df

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -45,6 +45,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "086d0cf0-e26b-4ab4-9070-cf96d67e5f5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read data from csv file to pandas DataFrame\n",
+    "df = pd.read_csv(\"\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "52d7809f-dd55-4350-a52d-7c20c761a102",
    "metadata": {},
