In machine_learning_template.ipynb, in data quality checks section, show df info and top 5 rows

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -64,6 +64,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "019d22f7-282d-47ee-bfcf-e85352c450c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show DataFrame info\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b00719b-3f66-405d-97a0-79907e91ea5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show top five rows\n",
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7aad1422-e239-4d5d-b6e4-31661d8050be",
    "metadata": {},
