In machine_learning_template.ipynb, in data preprocessing section, add subsection for handling duplicates

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -95,6 +95,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "619f1a0d-a98f-4446-8d44-d7e553e6230f",
+   "metadata": {},
+   "source": [
+    "## Handling Duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71162a8d-4f29-470c-a919-8494ef16e376",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Diagnose duplicates\n",
+    "df.duplicated().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0253293-b7c9-4335-9eef-61b29a09ce2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove duplicates\n",
+    "df = df.drop_duplicates().copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eb28c409-34a3-493f-8cd9-856b5c25e0d3",
    "metadata": {},
    "source": [
