In machine_learning_template.ipynb, in data preprocessing section, add subsection for data type conversion

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -128,6 +128,25 @@
    "id": "eb28c409-34a3-493f-8cd9-856b5c25e0d3",
    "metadata": {},
    "source": [
+    "## Data Type Conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d92d718-ec5a-491c-873b-f2b8230f71a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert column from str to int\n",
+    "df[\"int_column\"] = df[\"str_column\"].astype(\"Int32\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47ff6c41-2244-462e-968a-9e8473a89ed6",
+   "metadata": {},
+   "source": [
     "# Exploratory Data Analysis (EDA)"
    ]
   },
