In machine_learning_template.ipynb, in data preprocessing section, add subsection for handling missing values with continuous columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -147,6 +147,45 @@
    "id": "47ff6c41-2244-462e-968a-9e8473a89ed6",
    "metadata": {},
    "source": [
+    "## Handling Missing Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c0c06ef-bbbf-4d18-bde4-e7a50fc1a1a3",
+   "metadata": {},
+   "source": [
+    "### Continuous Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1680d14e-5853-4c3f-ac50-d639b7033fa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Descriptive statistics of continuous column\n",
+    "df[\"continuous_column\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "342ca973-3ef1-43a3-b690-69c0ed2f0d12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Impute missing values with the median\n",
+    "median = df[\"continuous_column\"].median()\n",
+    "df[\"continuous_column\"] = df[\"continuous_column\"].fillna(median)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8018d4b9-c440-4b15-aafb-a4bb3a3e79fa",
+   "metadata": {},
+   "source": [
     "# Exploratory Data Analysis (EDA)"
    ]
   },
