In machine_learning_template.ipynb, in data preprocessing section, add subsection for handling missing values with categorical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -186,6 +186,37 @@
    "id": "8018d4b9-c440-4b15-aafb-a4bb3a3e79fa",
    "metadata": {},
    "source": [
+    "### Categorical Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0638cab2-bc30-4ae3-9cc1-310b50d5cb69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Frequencies of categorical column\n",
+    "df[\"categorical_column\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c36266f3-6460-48cf-83af-0c888432655b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Impute missing values with the mode \n",
+    "mode = df[\"categorical_column\"].mode()[0]\n",
+    "df[\"categorical_column\"] = df[\"categorical_column\"].fillna(mode)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ca10b19-02a9-4a0f-b543-7374f677d139",
+   "metadata": {},
+   "source": [
     "# Exploratory Data Analysis (EDA)"
    ]
   },
