In machine_learning_template.ipynb, in setup section add environment variables subsection

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -25,15 +25,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "00680c12-3986-4262-9d6d-e330b55fd079",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "100528be-33fb-4f95-b8f8-e791de38fe6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4896aa22-da27-4d06-b34f-d63ceace4ff0",
+   "metadata": {},
+   "source": [
+    "## Environment Variables \n",
+    "**Note**: Setting environment variables is optional, but it is recommended if you store sensitive information (such as API keys or database credentials) in a `.env` file. Using environment variables helps keep such information secure and separate from your codebase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "711bb3ec-8e57-460d-8b31-0508025f19c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Get API key from .env \n",
+    "api_key = os.getenv(\"api_key\")"
    ]
   },
   {
