In machine_learning_template.ipynb, in environment variables subsection, get sql database credentials

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -67,7 +67,11 @@
     "load_dotenv()\n",
     "\n",
     "# Get API key from .env \n",
-    "api_key = os.getenv(\"api_key\")"
+    "api_key = os.getenv(\"api_key\")\n",
+    "\n",
+    "# Get SQL database credentials from .env\n",
+    "sql_username = os.getenv(\"SQL_USERNAME\")\n",
+    "sql_password = os.getenv(\"SQL_PASSWORD\")"
    ]
   },
   {
