In machine_learning_template.ipynb, in environment variables subsection, capitalize environment variable name for api key

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -67,7 +67,7 @@
     "load_dotenv()\n",
     "\n",
     "# Get API key from .env \n",
-    "api_key = os.getenv(\"api_key\")\n",
+    "api_key = os.getenv(\"API_KEY\")\n",
     "\n",
     "# Get SQL database credentials from .env\n",
     "sql_username = os.getenv(\"SQL_USERNAME\")\n",
