In machine_learning_template.ipynb, in data loading section, add subsection for loading mysql into pandas df

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -83,14 +83,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3de96aef-7438-41fd-bd1d-8cdbdc0ed9cb",
+   "metadata": {},
+   "source": [
+    "## csv "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "086d0cf0-e26b-4ab4-9070-cf96d67e5f5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read data from csv file to pandas DataFrame\n",
-    "df = pd.read_csv(\"\")"
+    "# Load data from a csv file into a Pandas DataFrame\n",
+    "df = pd.read_csv(\"your_csv_file_here.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b63482d3-000f-4235-a16a-51d6d8a08dba",
+   "metadata": {},
+   "source": [
+    "## MySQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b81da48-0441-4908-ba1a-990449b65ed5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports \n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Database info\n",
+    "mysql_host = \"localhost\"  # Default hostname for a MySQL server running locally\n",
+    "mysql_port = 3306  # Default port for MySQL\n",
+    "mysql_database_name = \"your_mysql_database_name_here\"\n",
+    "mysql_table_name = \"your_mysql_table_name_here\"\n",
+    "\n",
+    "# Create an SQLAlchemy engine for interacting with the MySQL database\n",
+    "engine = create_engine(f\"mysql+mysqlconnector://{sql_username}:{sql_password}@{mysql_host}:{mysql_port}/{mysql_database_name}\")\n",
+    "\n",
+    "# Load data from MySQL database into a Pandas DataFrame\n",
+    "df = pd.read_sql(f\"SELECT * FROM {mysql_table_name}\", con=engine)\n",
+    "\n",
+    "# Close the engine\n",
+    "engine.dispose()"
    ]
   },
   {
