In machine_learning_template.ipynb, in handling duplicates subsection, add duplicates based on specific columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -182,13 +182,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee509a36-86a0-4e56-bbeb-ecb29a809288",
+   "metadata": {},
+   "source": [
+    "Duplicates based on all columns:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "71162a8d-4f29-470c-a919-8494ef16e376",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Diagnose duplicates\n",
+    "# Diagnose duplicates \n",
     "df.duplicated().value_counts()"
    ]
   },
@@ -201,6 +209,36 @@
    "source": [
     "# Remove duplicates\n",
     "df = df.drop_duplicates().copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a55f43e8-f544-414c-8979-d3a52b0b919d",
+   "metadata": {},
+   "source": [
+    "Duplicates based on specific columns, e.g. the ID column or a combination of columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13ec11f9-42d4-4bd2-a769-c6affd2778d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Diagnose duplicates\n",
+    "df.duplicated(subset=[\"column_1\", \"column_2\", \"column_3\"]).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c620ab52-9ff0-4b3d-a0d6-ee856fdfb4cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove duplicates\n",
+    "df = df.drop_duplicates(subset=[\"column_1\", \"column_2\", \"column_3\"]).copy()"
    ]
   },
   {
