In machine_learning_template.ipynb, in data type conversion subsection, add str to datetime

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -261,6 +261,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee9eb41a-a715-4c64-a6ca-9db164c4dcbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert column from str to datetime\n",
+    "df[\"datetime_column\"] = pd.to_datetime(df[\"str_column\"])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "47ff6c41-2244-462e-968a-9e8473a89ed6",
    "metadata": {},
