In machine_learning_template.ipynb, in data preprocessing section, add feature extraction subsection with code to extract categorical feature from string column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -276,6 +276,39 @@
    "id": "47ff6c41-2244-462e-968a-9e8473a89ed6",
    "metadata": {},
    "source": [
+    "## Feature Extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "639472a6-9633-4972-b19f-e57b10ad2087",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create function to extract a category from a string   \n",
+    "def extract_categorical_feature(string):\n",
+    "    if \"Keyword 1\" in string:\n",
+    "        return \"Category 1\"\n",
+    "    elif \"Keyword 2\" in string:\n",
+    "        return \"Category 2\"\n",
+    "    elif \"Keyword 3\" in string:\n",
+    "        return \"Category 3\"\n",
+    "    else:\n",
+    "        return np.nan  # Return a missing value if no match is found\n",
+    "\n",
+    "# Apply function on an existing string column to create a new categorical feature column\n",
+    "df[\"categorical_feature\"] = df[\"str_column\"].apply(extract_categorical_feature)\n",
+    "\n",
+    "# Show category frequencies\n",
+    "print(df[\"categorical_feature\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cc4d1a9-db9b-4e28-ba65-986831dd8b38",
+   "metadata": {},
+   "source": [
     "## Handling Missing Values"
    ]
   },
@@ -284,7 +317,7 @@
    "id": "6c0c06ef-bbbf-4d18-bde4-e7a50fc1a1a3",
    "metadata": {},
    "source": [
-    "### Continuous Column"
+    "Missing values on a continuous column:"
    ]
   },
   {
@@ -315,7 +348,7 @@
    "id": "8018d4b9-c440-4b15-aafb-a4bb3a3e79fa",
    "metadata": {},
    "source": [
-    "### Categorical Column"
+    "Missing values on a categorical column:"
    ]
   },
   {
