In machine_learning_template.ipynb, in feature extraction subsection, improve the code to extract categorical feature from string column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -286,19 +286,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create function to extract a category from a string   \n",
-    "def extract_categorical_feature(string):\n",
-    "    if \"Keyword 1\" in string:\n",
-    "        return \"Category 1\"\n",
-    "    elif \"Keyword 2\" in string:\n",
-    "        return \"Category 2\"\n",
-    "    elif \"Keyword 3\" in string:\n",
-    "        return \"Category 3\"\n",
-    "    else:\n",
-    "        return np.nan  # Return a missing value if no match is found\n",
+    "# Function to extract a category from a string   \n",
+    "def extract_category_from_string(string):\n",
+    "    # Map categories to their corresponding list of keywords\n",
+    "    category_keywords_map = {\n",
+    "        \"Category 1\": [\"Keyword 1\"],\n",
+    "        \"Category 2\": [\"Keyword 2\"],\n",
+    "        \"Category 3\": [\"Keyword 3\"]\n",
+    "    }\n",
+    "\n",
+    "    # Loop through each category and its associated keywords \n",
+    "    for category, keywords in category_keywords_map.items():\n",
+    "        # Check if any keyword is present in the string\n",
+    "        if any(keyword in string for keyword in keywords):\n",
+    "            return category  # Return the category corresponding to the keyword\n",
+    "    return np.nan  # Return a missing value if no keyword matches\n",
     "\n",
     "# Apply function on an existing string column to create a new categorical feature column\n",
-    "df[\"categorical_feature\"] = df[\"str_column\"].apply(extract_categorical_feature)\n",
+    "df[\"categorical_feature\"] = df[\"str_column\"].apply(extract_category_from_string)\n",
     "\n",
     "# Show category frequencies\n",
     "print(df[\"categorical_feature\"].value_counts())"
