--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -280,6 +280,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e1c9931c-d4f6-4255-a894-2be60a02c26e",
+   "metadata": {},
+   "source": [
+    "Extract categorical feature from string column:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "639472a6-9633-4972-b19f-e57b10ad2087",
@@ -307,6 +315,36 @@
     "\n",
     "# Show category frequencies\n",
     "print(df[\"categorical_feature\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48f9089b-a2fd-4305-aa23-086332d45c01",
+   "metadata": {},
+   "source": [
+    "Extract numerical feature from string column:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41134f56-1d30-435d-9f32-6ff428d940a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to extract the first number in a string \n",
+    "def extract_number_from_string(string):\n",
+    "    first_number = re.search(r\"\\b-?\\d+\\b\", string)\n",
+    "    if first_number:\n",
+    "        return first_number.group()\n",
+    "    else:\n",
+    "        return np.nan  # Return a missing value if no number in string\n",
+    "\n",
+    "# Apply function on an existing string column to create a new numerical feature column\n",
+    "df[\"numerical_feature\"] = df[\"str_column\"].apply(extract_number_from_string).astype(float)\n",
+    "\n",
+    "# Show descriptive statistics of numerical feature\n",
+    "df[\"numerical_feature\"].describe()"
    ]
   },
   {
