In machine_learning_template.ipynb, in feature extraction subsection, import re to extract numerical features

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -332,6 +332,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
+    "import re\n",
+    "\n",
     "# Function to extract the first number in a string \n",
     "def extract_number_from_string(string):\n",
     "    first_number = re.search(r\"\\b-?\\d+\\b\", string)\n",
