In machine_learning_template.ipynb, in feature extraction subsection, add code to extract boolean feature from string column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -352,6 +352,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "beba6942-83b2-4bd4-9223-94bfc963beef",
+   "metadata": {},
+   "source": [
+    "Extract boolean feature from string column:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d5277ca-3ef2-4e5f-8b06-e2701b601f1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract a new boolean feature from an existing string column\n",
+    "df[\"boolean_column\"] = df[\"str_column\"].apply(lambda x: True if \"keyword 1\" in x.lower() or \"keyword 2\" in x.lower() else False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6cc4d1a9-db9b-4e28-ba65-986831dd8b38",
    "metadata": {},
    "source": [
