In machine_learning_template.ipynb, in feature extraction subsection, improve code for extracting boolean features

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -366,7 +366,8 @@
    "outputs": [],
    "source": [
     "# Extract a new boolean feature from an existing string column\n",
-    "df[\"boolean_column\"] = df[\"str_column\"].apply(lambda x: True if \"keyword 1\" in x.lower() or \"keyword 2\" in x.lower() else False)"
+    "keywords = [\"keyword 1\", \"keyword 2\", \"keyword 3\"]\n",
+    "df[\"boolean_column\"] = df[\"str_column\"].apply(lambda x: any(keyword.lower() in x.lower() for keyword in keywords))"
    ]
   },
   {
