In machine_learning_template.ipynb, in feature extraction subsection, update inline documentation comments for extracting boolean features

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -365,9 +365,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract a new boolean feature from an existing string column\n",
+    "# List of keywords to determine if the feature is present or absent\n",
     "keywords = [\"keyword 1\", \"keyword 2\", \"keyword 3\"]\n",
-    "df[\"boolean_column\"] = df[\"str_column\"].apply(lambda x: any(keyword.lower() in x.lower() for keyword in keywords))"
+    "\n",
+    "# Extract boolean feature column: True if any keyword is found in the string column\n",
+    "df[\"boolean_feature\"] = df[\"str_column\"].apply(lambda x: any(keyword.lower() in x.lower() for keyword in keywords))\n",
+    "\n",
+    "# Show frequencies of boolean feature\n",
+    "print(df[\"boolean_feature\"].value_counts())"
    ]
   },
   {
