In machine_learning_template.ipynb, in handling missing values subsection, add deletion

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -385,10 +385,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83b7806d-1465-4747-8780-b2e28d51a468",
+   "metadata": {},
+   "source": [
+    "### Imputation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6c0c06ef-bbbf-4d18-bde4-e7a50fc1a1a3",
    "metadata": {},
    "source": [
-    "Missing values on a continuous column:"
+    "Imputation for continuous column:"
    ]
   },
   {
@@ -419,7 +427,7 @@
    "id": "8018d4b9-c440-4b15-aafb-a4bb3a3e79fa",
    "metadata": {},
    "source": [
-    "Missing values on a categorical column:"
+    "Imputation for categorical column:"
    ]
   },
   {
@@ -443,6 +451,36 @@
     "# Impute missing values with the mode \n",
     "mode = df[\"categorical_column\"].mode()[0]\n",
     "df[\"categorical_column\"] = df[\"categorical_column\"].fillna(mode)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed9519b6-a492-4308-abc0-89a470543652",
+   "metadata": {},
+   "source": [
+    "### Deletion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33cc408e-1e71-4ec1-a678-9b14e16878ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete rows where any column has a missing value \n",
+    "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf359f7-2519-47cf-bb29-60d64918626a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete rows where either column_1 or column_2 has a missing value \n",
+    "df.dropna(subset=[\"column_1\", \"column_2\"], how=\"any\", inplace=True)"
    ]
   },
   {
