In machine_learning_template.ipynb, in data loading from mysql subsection, use sqlalchemy with engine.connect()

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -129,10 +129,8 @@
     "engine = create_engine(f\"mysql+mysqlconnector://{sql_username}:{sql_password}@{mysql_host}:{mysql_port}/{mysql_database_name}\")\n",
     "\n",
     "# Load data from MySQL database into a Pandas DataFrame\n",
-    "df = pd.read_sql(f\"SELECT * FROM {mysql_table_name}\", con=engine)\n",
-    "\n",
-    "# Close the engine\n",
-    "engine.dispose()"
+    "with engine.connect() as connection:\n",
+    "    df = pd.read_sql(f\"SELECT * FROM {mysql_table_name}\", con=connection)"
    ]
   },
   {
