In machine_learning_template.ipynb, in feature extraction subsection, use multiple example keywords for extracting categorical feature from str column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -296,9 +296,9 @@
     "def extract_category_from_string(string):\n",
     "    # Map categories to their corresponding list of keywords\n",
     "    category_keywords_map = {\n",
-    "        \"Category 1\": [\"Keyword 1\"],\n",
-    "        \"Category 2\": [\"Keyword 2\"],\n",
-    "        \"Category 3\": [\"Keyword 3\"]\n",
+    "        \"Category 1\": [\"Keyword 1\", \"Keyword 2\", \"Keyword 3\"],\n",
+    "        \"Category 2\": [\"Keyword 4\", \"Keyword 5\", \"Keyword 6\"],\n",
+    "        \"Category 3\": [\"Keyword 7\", \"Keyword 8\", \"Keyword 9\"]\n",
     "    }\n",
     "\n",
     "    # Loop through each category and its associated keywords \n",
