In machine_learning_template.ipynb, in feature extraction subsection, include float when extracting numerical feature from str column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -335,14 +335,14 @@
     "\n",
     "# Function to extract the first number in a string \n",
     "def extract_number_from_string(string):\n",
-    "    first_number = re.search(r\"\\b-?\\d+\\b\", string)\n",
+    "    first_number = re.search(r\"\\b-?\\d+(\\.\\d+)?\\b\", string)  # searches for first positive or negative integer or float (with \".\" as decimal separator)\n",
     "    if first_number:\n",
-    "        return first_number.group()\n",
+    "        return float(first_number.group())\n",
     "    else:\n",
     "        return np.nan  # Return a missing value if no number in string\n",
     "\n",
     "# Apply function on an existing string column to create a new numerical feature column\n",
-    "df[\"numerical_feature\"] = df[\"str_column\"].apply(extract_number_from_string).astype(float)\n",
+    "df[\"numerical_feature\"] = df[\"str_column\"].apply(extract_number_from_string)\n",
     "\n",
     "# Show descriptive statistics of numerical feature\n",
     "df[\"numerical_feature\"].describe()"
