In machine_learning_template.ipynb, in feature extraction subsection, handle comma decimal separator when extracting numerical feature from str column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -335,9 +335,9 @@
     "\n",
     "# Function to extract the first number in a string \n",
     "def extract_number_from_string(string):\n",
-    "    first_number = re.search(r\"\\b-?\\d+(\\.\\d+)?\\b\", string)  # searches for first positive or negative integer or float (with \".\" as decimal separator)\n",
+    "    first_number = re.search(r\"\\b-?\\d+([.,]\\d+)?\\b\", string)  # searches for first integer or float (positive or negative; decimal separator \".\" or \",\")\n",
     "    if first_number:\n",
-    "        return float(first_number.group())\n",
+    "        return float(first_number.group().replace(\",\", \".\"))  # Replace \",\" with \".\" as decimal separator  \n",
     "    else:\n",
     "        return np.nan  # Return a missing value if no number in string\n",
     "\n",
