--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -404,8 +404,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Descriptive statistics of continuous column\n",
-    "df[\"continuous_column\"].describe()"
+    "# Descriptive statistics of numerical column\n",
+    "df[\"numerical_column\"].describe()"
    ]
   },
   {
@@ -416,8 +416,8 @@
    "outputs": [],
    "source": [
     "# Impute missing values with the median\n",
-    "median = df[\"continuous_column\"].median()\n",
-    "df[\"continuous_column\"] = df[\"continuous_column\"].fillna(median)"
+    "median = df[\"numerical_column\"].median()\n",
+    "df[\"numerical_column\"] = df[\"numerical_column\"].fillna(median)"
    ]
   },
   {
@@ -487,6 +487,38 @@
    "metadata": {},
    "source": [
     "# Exploratory Data Analysis (EDA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "571beab2-bbb5-4fba-8143-69b04a5ea2c8",
+   "metadata": {},
+   "source": [
+    "## Column Types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31d48ac1-c330-43f6-b460-bf5b57c9acb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show columns and their data types\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6838b9e-f03b-4791-abd6-ab1c0565e4fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define numerical, categorical and boolean columns\n",
+    "numerical_columns = [\"numerical_column_1\", \"numerical_column_2\", \"numerical_column_3\"]\n",
+    "categorical_columns = [\"categorical_column_1\", \"categorical_column_2\", \"categorical_column_3\"]\n",
+    "boolean_columns = [\"boolean_column_1\", \"boolean_column_2\", \"boolean_column_3\"]"
    ]
   },
   {
