In machine_learning_template.ipynb, in EDA section, add subsection for descriptive statistics with table for numerical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -523,6 +523,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cfe81ae6-559e-432b-8cf2-8643b13ef6dd",
+   "metadata": {},
+   "source": [
+    "## Descriptive Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "565ce7fc-350e-4624-949a-60d1386bb82f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Table with descriptive statistics of numerical columns\n",
+    "df[numerical_columns].describe().transpose()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
    "metadata": {},
    "source": [
