In machine_learning_template.ipynb, in EDA section, add subsection for histogram of numerical label

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -542,8 +542,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
+   "id": "9895c96c-daff-4873-852d-615627e17dcb",
    "metadata": {},
+   "source": [
+    "## Numerical Label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b76c43e-ff1c-4477-8610-a103373b9383",
+   "metadata": {},
+   "source": [
+    "### Histogram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4efcf592-a21f-4155-8d27-b16cffd8cf44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create histogram \n",
+    "sns.histplot(df[\"numerical_label\"])\n",
+    "\n",
+    "# Add axes labels \n",
+    "plt.xlabel(\"numerical_label\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "# Add title\n",
+    "plt.title(\"Distribution of numerical_label\")\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Train-Validation-Test Split"
    ]
