--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -40,7 +40,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
