In machine_learning_template.ipynb, in EDA of Numerical Label subsection, add correlations between numerical label and each numerical and boolean column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -581,6 +581,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6382adcc-1fdb-48b7-8f2a-6d27a559bbfc",
+   "metadata": {},
+   "source": [
+    "### Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3675dca5-3693-4669-8da3-6d97648bc5be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correlations between the numerical label and each numerical and boolean column\n",
+    "combined_columns = numerical_columns + boolean_columns\n",
+    "df[combined_columns].corr()[\"numerical_label\"].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
