In machine_learning_template.ipynb, in EDA of Numerical Label subsection, add scatterplots

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -601,6 +601,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a6c0cc0-34f1-4f4c-b8d0-2243ce6f4e4d",
+   "metadata": {},
+   "source": [
+    "### Scatterplots \n",
+    "Scatterplot matrix that shows scatterplots between the numerical label and each numerical column.   \n",
+    "Example code for 9 scatterplots in a 3x3 matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36f4a478-acd0-4f18-99f8-81f9247250bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size \n",
+    "plt.figure(figsize=(12, 12))\n",
+    "\n",
+    "# List of numerical columns excluding the label column\n",
+    "numerical_columns_without_label = [col for col in numerical_columns if col != \"numerical_label\"]\n",
+    "\n",
+    "# Iterate over the numerical columns\n",
+    "for i, numerical_column in enumerate(numerical_columns_without_label):\n",
+    "    # Create a subplot in a 3x3 grid (current subplot i+1 because subplot indices start at 1)\n",
+    "    plt.subplot(3, 3, i + 1)\n",
+    "    \n",
+    "    # Create a scatterplot between the current column and the numerical label\n",
+    "    sns.scatterplot(data=df, x=numerical_column, y=\"numerical_label\")\n",
+    "    \n",
+    "    # Add title and axis labels \n",
+    "    plt.title(f\"numerical_label by {numerical_column}\")\n",
+    "    plt.xlabel(f\"{numerical_column}\")\n",
+    "    plt.ylabel(\"numerical_label\")\n",
+    "\n",
+    "# Adjust layout to prevent overlap\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
