--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -644,6 +644,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73cdbe81-6e4d-48b4-ae69-07336924ce94",
+   "metadata": {},
+   "source": [
+    "### Numerical Label by Category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfe5d314-45ef-4eee-9cfa-918a52081ae8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Descriptive statistics of numerical label by categorical column\n",
+    "label_by_category = df[\"numerical_label\"].groupby(df[\"categorical_column\"])\n",
+    "label_by_category.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
