--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -651,6 +651,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51c58bee-b56d-4f5c-9b3f-ccf5cd47203c",
+   "metadata": {},
+   "source": [
+    "Descriptive statistics:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bfe5d314-45ef-4eee-9cfa-918a52081ae8",
@@ -660,6 +668,36 @@
     "# Descriptive statistics of numerical label by categorical column\n",
     "label_by_category = df[\"numerical_label\"].groupby(df[\"categorical_column\"])\n",
     "label_by_category.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fd0cd54-3004-408b-a1b6-4874e034fd71",
+   "metadata": {},
+   "source": [
+    "Bar plot:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5f6c9f6-896f-4490-a125-3fe8ce91cb8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store the median of the numerical label by category\n",
+    "median_label_by_category = label_by_category.median()\n",
+    "\n",
+    "# Bar plot for median by category\n",
+    "sns.barplot(x=median_label_by_category.index, y=median_label_by_category.values, palette=\"colorblind\")\n",
+    "\n",
+    "# Add title and axes labels\n",
+    "plt.title(\"Median numerical_label by categorical_column\")\n",
+    "plt.xlabel(\"Category\")\n",
+    "plt.ylabel(\"numerical_label\")\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
    ]
   },
   {
