In machine_learning_template.ipynb, in EDA section, add matrix of bar plots for numerical label by each categorical column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -702,6 +702,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23ec66e0-2f7f-49c4-847b-f7b696217640",
+   "metadata": {},
+   "source": [
+    "Bar plot matrix that shows bar plots between the numerical label and each categorical column.  \n",
+    "Example code for 5 bar plots in a 2x3 matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dae6f05a-e6d8-4f98-9046-f2ad3cd56b2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size to 12x6 inches\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "# Iterate over the categorical columns\n",
+    "for i, categorical_column in enumerate(categorical_columns):\n",
+    "    # Create a subplot in a 2x3 grid (current subplot i+1 because subplot indices start at 1)\n",
+    "    plt.subplot(2, 3, i + 1)\n",
+    "    \n",
+    "    # Create a bar plot of median numerical_label by the current categorical column\n",
+    "    ax = sns.barplot(data=df, x=categorical_column, y=\"numerical_label\", estimator=np.median, ci=None)\n",
+    "    \n",
+    "    # Add title and axes labels\n",
+    "    plt.title(f\"Median numerical_label by {categorical_column}\")\n",
+    "    plt.xlabel(\"Category\")\n",
+    "    plt.ylabel(\"numerical_label\")\n",
+    "\n",
+    "# Adjust layout to prevent overlap\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
