In machine_learning_template.ipynb, in EDA section, add subsection for frequencies of a categorical column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -741,6 +741,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c01f9891-a8ab-4a10-9351-2be2e20a1e8e",
+   "metadata": {},
+   "source": [
+    "## Categorical Column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "775bdb25-d466-48d1-bf2f-f2168e7bd774",
+   "metadata": {},
+   "source": [
+    "### Frequencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97d7a462-d369-4340-97e6-51480f28e58f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate absolute and relative frequencies of a categorical colum\n",
+    "absolute_frequencies = df[\"categorical_column\"].value_counts()\n",
+    "relative_frequencies = absolute_frequencies / absolute_frequencies.sum() * 100\n",
+    "\n",
+    "# Show frequencies\n",
+    "print(f\"Absolute frequencies:\\n {absolute_frequencies}\\n\")\n",
+    "print(f\"Relative frequencies:\\n {relative_frequencies.round(1)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
