In machine_learning_template.ipynb, in missing value imputation subsection, rename continuous column to numerical column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -396,7 +396,7 @@
    "id": "6c0c06ef-bbbf-4d18-bde4-e7a50fc1a1a3",
    "metadata": {},
    "source": [
-    "Imputation for continuous column:"
+    "Imputation for numerical column:"
    ]
   },
   {
