In machine_learning_template.ipynb, in EDA > Descriptive Statistics subsection, update inline documentation comment

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -538,7 +538,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Table with descriptive statistics of numerical columns\n",
+    "# Table with descriptive statistics of all numerical columns\n",
     "df[numerical_columns].describe().transpose()"
    ]
   },
