In machine_learning_template.ipynb, in Data Preprocessing > Feature Extraction section, add markdown headers for subsections

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -284,7 +284,7 @@
    "id": "e1c9931c-d4f6-4255-a894-2be60a02c26e",
    "metadata": {},
    "source": [
-    "Extract categorical feature from string column:"
+    "### Categorical Feature from String Column"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "id": "48f9089b-a2fd-4305-aa23-086332d45c01",
    "metadata": {},
    "source": [
-    "Extract numerical feature from string column:"
+    "### Numerical Feature from String Column"
    ]
   },
   {
@@ -355,7 +355,7 @@
    "id": "beba6942-83b2-4bd4-9223-94bfc963beef",
    "metadata": {},
    "source": [
-    "Extract boolean feature from string column:"
+    "### Boolean Feature from String Column"
    ]
   },
   {
