In machine_learning_template.ipynb, in EDA > Numerical Label by Category subsection, update inline documentation comment

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -688,7 +688,7 @@
     "# Store the median of the numerical label by category\n",
     "median_label_by_category = label_by_category.median()\n",
     "\n",
-    "# Bar plot for median by category\n",
+    "# Bar plot of median by category\n",
     "sns.barplot(x=median_label_by_category.index, y=median_label_by_category.values, palette=\"colorblind\")\n",
     "\n",
     "# Add title and axes labels\n",
