In machine_learning_template.ipynb, in EDA of Categorical Column section, add bar plot of frequencies

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -756,19 +756,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9b9fe5a-ecf0-4388-8a9d-88590fa48f89",
+   "metadata": {},
+   "source": [
+    "Absolute and relative frequencies of a categorical colum:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "97d7a462-d369-4340-97e6-51480f28e58f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate absolute and relative frequencies of a categorical colum\n",
+    "# Calculate absolute and relative frequencies \n",
     "absolute_frequencies = df[\"categorical_column\"].value_counts()\n",
     "relative_frequencies = absolute_frequencies / absolute_frequencies.sum() * 100\n",
     "\n",
     "# Show frequencies\n",
     "print(f\"Absolute frequencies:\\n {absolute_frequencies}\\n\")\n",
     "print(f\"Relative frequencies:\\n {relative_frequencies.round(1)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b057fa22-fe17-4ea5-8558-cd8454ac77d6",
+   "metadata": {},
+   "source": [
+    "Bar plot of frequencies:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e9a30df-8cbe-42b6-925d-57d808f9099c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bar plot\n",
+    "sns.barplot(x=absolute_frequencies.index, y=absolute_frequencies.values, palette=\"colorblind\")\n",
+    "\n",
+    "# Add title and axes labels \n",
+    "plt.title(\"categorical_column\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "# Rotate x-axis tick labels by 45 degrees\n",
+    "plt.xticks(rotation=45)\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
    ]
   },
   {
